--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3001
-MONGODB_URI = mongodb://127.0.0.1:27017/project_28_02
+MONGODB_URI = mongodb+srv://kienit:<@1nC30JvF>@test.pgxet.mongodb.net/?retryWrites=true&w=majority&appName=test
 JWT_SECRET = project_28_02_@1nJ40JWT@
