--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3001
-MONGODB_URI = MONGODB_URI = mongodb+srv://kienit:%401nC30JvF@test.pgxet.mongodb.net/web?retryWrites=true&w=majority&appName=test
+MONGODB_URI = mongodb+srv://kienit:%401nC30JvF@test.pgxet.mongodb.net/web?retryWrites=true&w=majority&appName=test
 JWT_SECRET = project_28_02_@1nJ40JWT@
