--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3001
-MONGODB_URI = https://cloud.mongodb.com/v2/67e1786d23fa1c4908ed2902#/metrics/replicaSet/67e1796a68fa88369e2e5c98/explorer/web
+MONGODB_URI="mongodb+srv://username:@1nC30JvF@cluster.mongodb.net/web?retryWrites=true&w=majority"
 JWT_SECRET = project_28_02_@1nJ40JWT@
